<resources>
    <string name="app_name">Cadastro de Cliente</string>
    <string name="telefone">Telefone:</string>
    <string name="idade">Idade:</string>
    <string name="cpf">CPF</string>
    <string name="nome">Nome:</string>
    <string name="consultar">Consultar</string>
    <string name="id">ID</string>
    <string name="deletar">Deletar</string>
    <string name="alterar">Alterar</string>
    <string name="cancelar">Cancelar</string>
</resources>
